--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bootstrap": "^4.5.1",
     "gatsby": "^2.23.12",
     "gatsby-background-image": "^1.1.1",
+    "gatsby-image": "^2.4.14",
     "gatsby-plugin-sharp": "^2.6.24",
+    "gatsby-source-contentful": "^2.3.34",
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-transformer-sharp": "^2.5.12",
     "react": "^16.12.0",
